Added batch loading for neural network update and figure generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignoring any figures that are generated to visualise training.
+*.png
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
